UI: Fix checkboxes not showing on some lists - fixes #2387
rn=

(integrated from the KomodoIDE master branch change d5ef5fbb09 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/d5ef5fbb09

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -404,6 +404,17 @@ checkbox:not(.label-only)
     &[checked="true"] .checkbox-spacer-box { .icon-check-square(); }
 }
 
+listitem[type="checkbox"]
+{
+    listcell
+    {
+        .icon();
+    }
+
+    &:not([checked="true"]) listcell { .icon-square(); }
+    &[checked="true"] listcell { .icon-check-square(); }
+}
+
 menuitem[type="checkbox"]
 {
     & > .menu-iconic-checker
